# proctemp

./: .gitignore  Makefile  Makefile.am  README  README.md  autogen.sh  configure.ac  cputemp.cc  cputemp.h  cputempx.cc  html.h  options.h  proctemp.cc  proctemp.h  proctempalert.1  proctempalert.cc  proctempdump.cc  proctempn.cc  proctempview.1  proctempview.cc  proctempx.cc  sensors.h  therm.1  therm.cc  therm.h  thermalert.1  thermalert.cc  ui.h  wscript
